<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical" >
        
        <TextView
	        android:text="If you are representing law enforcement, you can enter your information here."
	        android:textSize="15sp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	      	android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
        
        <LinearLayout
	        android:layout_width="fill_parent" 
	        android:layout_height="35dp" 
	        android:orientation="horizontal"
	        android:layout_marginTop="13dp" >
	        
	        <TextView
	            android:text="@string/Dept"
	            android:textSize="13sp"
	        	android:layout_width="wrap_content"
	        	android:layout_marginLeft="10dp"
	        	android:layout_marginRight="10dp"
	        	android:layout_height="25dp" />
	        
	        <EditText
	            android:background="@drawable/rounded_edittext"
	            android:hint="Name of Police Department"
	            android:maxLines="1"
	            android:singleLine="True"
	            android:nextFocusDown="@+id/name_police"
	            android:scrollbars="horizontal"
               	android:scrollHorizontally="true"
			 	android:id="@+id/dept_police"
				android:layout_width="fill_parent"
			 	android:layout_height="30dp"
			 	android:textSize="13sp"
			 	android:layout_marginRight="10dp"
			 	android:padding="8dp" />
	        
	    </LinearLayout>
        
	    <LinearLayout
	        android:layout_width="fill_parent" 
	        android:layout_height="35dp" 
	        android:orientation="horizontal"
	        android:layout_marginTop="3dp" >
	        
	        <TextView
	            android:text="@string/Name"
	            android:textSize="13sp"
	        	android:layout_width="wrap_content"
	        	android:layout_marginLeft="10dp"
	        	android:layout_marginRight="10dp"
	        	android:layout_height="25dp" />
	        
	        <EditText
	            android:background="@drawable/rounded_edittext"
	            android:hint="First Last"
	            android:maxLines="1"
	            android:singleLine="True"
	            android:nextFocusDown="@+id/street_address_police"
	            android:scrollbars="horizontal"
               	android:scrollHorizontally="true"
			 	android:id="@+id/name_police"
				android:layout_width="fill_parent"
			 	android:layout_height="30dp"
			 	android:textSize="13sp"
			 	android:layout_marginRight="10dp"
			 	android:padding="8dp" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent" 
	        android:layout_height="35dp" 
	        android:orientation="horizontal"
	        android:layout_marginTop="3dp" >
	        
	        <TextView
	            android:text="@string/Street_Address"
	            android:textSize="13sp"
	        	android:layout_width="wrap_content"
	        	android:layout_marginLeft="10dp"
	        	android:layout_marginRight="10dp"
	        	android:layout_height="25dp" />
	        
	        <EditText
	            android:id="@+id/street_address_police"
	            android:hint="Street, City, State Zip Code"
	            android:maxLines="1"
	            android:singleLine="True"
	            android:nextFocusDown="@+id/email_address_police"
	            android:scrollbars="horizontal"
               	android:scrollHorizontally="true"
	            android:layout_height="wrap_content"
				android:minHeight="30dp" 
			 	android:layout_width="fill_parent"
			 	android:textSize="13sp"
			 	android:layout_marginRight="10dp"
			 	android:background="@drawable/rounded_edittext"
			 	android:padding="8dp" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent" 
	        android:layout_height="35dp" 
	        android:orientation="horizontal"
	        android:layout_marginTop="3dp" >
	        
	        <TextView
	            android:text="@string/Email_Address"
	            android:textSize="13sp"
	        	android:layout_width="wrap_content"
	        	android:layout_marginLeft="10dp"
	        	android:layout_marginRight="10dp"
	        	android:layout_height="25dp" />
	        
	        <EditText
	            android:id="@+id/email_address_police"
			 	android:layout_width="fill_parent"
			 	android:maxLines="1"
	            android:singleLine="True"
	            android:nextFocusDown="@+id/phone_number_police"
	            android:scrollbars="horizontal"
               	android:scrollHorizontally="true"
			 	android:layout_height="30dp"
			 	android:textSize="13sp"
			 	android:layout_marginRight="10dp"
			 	android:background="@drawable/rounded_edittext"
			 	android:padding="8dp" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent" 
	        android:layout_height="35dp" 
	        android:orientation="horizontal"
	        android:layout_marginTop="3dp" >
	        
	        <TextView
	            android:text="@string/Phone_Number"
	            android:textSize="13sp"
	        	android:layout_width="wrap_content"
	        	android:layout_marginLeft="10dp"
	        	android:layout_marginRight="10dp"
	        	android:layout_height="25dp" />
	        
	        <EditText
	           	android:id="@+id/phone_number_police"
	            android:hint="XXX-XXX-XXXX"
	            android:maxLines="1"
	            android:singleLine="True"
	            android:nextFocusDown="@+id/facebook_police"
	            android:scrollbars="horizontal"
               	android:scrollHorizontally="true"
			 	android:layout_width="fill_parent"
			 	android:layout_height="30dp"
			 	android:textSize="13sp"
			 	android:layout_marginRight="10dp"
			 	android:background="@drawable/rounded_edittext"
			 	android:padding="8dp" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent" 
	        android:layout_height="35dp" 
	        android:orientation="horizontal"
	        android:layout_marginTop="3dp" >
	        
	        <TextView
	            android:text="@string/Facebook"
	            android:textSize="13sp"
	        	android:layout_width="wrap_content"
	        	android:layout_marginLeft="10dp"
	        	android:layout_marginRight="10dp"
	        	android:layout_height="25dp" />
	        
	        <EditText
	            android:id="@+id/facebook_police"
	            android:hint="Copy and paste the url"
	            android:maxLines="1"
	            android:singleLine="True"
	            android:nextFocusDown="@+id/instagram_police"
	            android:scrollbars="horizontal"
               	android:scrollHorizontally="true"
			 	android:layout_width="fill_parent"
			 	android:layout_height="30dp"
			 	android:textSize="13sp"
			 	android:layout_marginRight="10dp"
			 	android:background="@drawable/rounded_edittext"
			 	android:padding="8dp" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent" 
	        android:layout_height="35dp" 
	        android:orientation="horizontal"
	        android:layout_marginTop="3dp" >
	        
	        <TextView
	            android:text="@string/Instagram"
	            android:textSize="13sp"
	        	android:layout_width="wrap_content"
	        	android:layout_marginLeft="10dp"
	        	android:layout_marginRight="10dp"
	        	android:layout_height="25dp" />
	        
	        <EditText
	            android:id="@+id/instagram_police"
	            android:hint="Copy and paste the url"
	            android:maxLines="1"
	            android:singleLine="True"
	            android:nextFocusDown="@+id/twitter_police"
	            android:scrollbars="horizontal"
               	android:scrollHorizontally="true"
			 	android:layout_width="fill_parent"
			 	android:layout_height="30dp"
			 	android:textSize="13sp"
			 	android:layout_marginRight="10dp"
			 	android:background="@drawable/rounded_edittext"
			 	android:padding="8dp" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent" 
	        android:layout_height="35dp" 
	        android:orientation="horizontal"
	        android:layout_marginTop="3dp" >
	        
	        <TextView
	            android:text="@string/Twitter"
	            android:textSize="13sp"
	        	android:layout_width="wrap_content"
	        	android:layout_marginLeft="10dp"
	        	android:layout_marginRight="10dp"
	        	android:layout_height="25dp" />
	        
	        <EditText
	            android:id="@+id/twitter_police"
	            android:hint="Copy and paste the url"
	            android:maxLines="1"
	            android:singleLine="True"
	            android:scrollbars="horizontal"
               	android:scrollHorizontally="true"
			 	android:layout_width="fill_parent"
			 	android:layout_height="30dp"
			 	android:textSize="13sp"
			 	android:layout_marginRight="10dp"
			 	android:background="@drawable/rounded_edittext"
			 	android:padding="8dp" />
	        
	    </LinearLayout>
	    
	</LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:orientation="vertical"
	    android:gravity="center" >
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginBottom="10dp"
		    android:gravity="center" >
	        
	        <Button
	             android:background="@drawable/sandrift"
	             android:onClick="editLawEnforcement"
	             android:id="@+id/submitbutton"
				 android:layout_width="125dp"
				 android:layout_height="wrap_content"
				 android:clickable="true" 
				 android:text="@string/Submit" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:gravity="center" >
	        
	    	<TextView 
	            android:layout_marginLeft="3dp"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="Left: Pawn Shop" 
				android:textSize="14sp" />
	        
	        <View
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1" />
	        
			<TextView 
	            android:layout_marginRight="3dp"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="Right: Campus Security" 
				android:textSize="14sp" />		        
		    
	    </LinearLayout>
	    	
	</LinearLayout>
    
</RelativeLayout>