<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true" >
    
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent" >
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="vertical" >
	        
	        <TextView
		        android:text="You can edit your contact information here."
		        android:textSize="15sp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="10dp"
		      	android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
	        
		    <LinearLayout
		        android:layout_width="fill_parent" 
		        android:layout_height="35dp" 
		        android:orientation="horizontal"
		        android:layout_marginTop="13dp" >
		        
		        <TextView
		            android:text="@string/Name"
		            android:textSize="13sp"
		        	android:layout_width="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:layout_marginRight="10dp"
		        	android:layout_height="25dp" />
		        
		        <EditText
		            android:background="@drawable/rounded_edittext"
		            android:hint="First Last"
		            android:maxLines="1"
		            android:singleLine="True"
		            android:nextFocusDown="@+id/street_address"
		            android:scrollbars="horizontal"
                	android:scrollHorizontally="true"
				 	android:id="@+id/name"
					android:layout_width="fill_parent"
				 	android:layout_height="30dp"
				 	android:textSize="13sp"
				 	android:layout_marginRight="10dp"
				 	android:padding="8dp" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="fill_parent" 
		        android:layout_height="35dp" 
		        android:orientation="horizontal"
		        android:layout_marginTop="3dp" >
		        
		        <TextView
		            android:text="@string/Street_Address"
		            android:textSize="13sp"
		        	android:layout_width="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:layout_marginRight="10dp"
		        	android:layout_height="25dp" />
		        
		        <EditText
		            android:id="@+id/street_address"
		            android:hint="Street, City, State Zip Code"
		            android:maxLines="1"
		            android:singleLine="True"
		            android:nextFocusDown="@+id/email_address"
		            android:scrollbars="horizontal"
                	android:scrollHorizontally="true"
		            android:layout_height="wrap_content"
					android:minHeight="30dp" 
				 	android:layout_width="fill_parent"
				 	android:textSize="13sp"
				 	android:layout_marginRight="10dp"
				 	android:background="@drawable/rounded_edittext"
				 	android:padding="8dp" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="fill_parent" 
		        android:layout_height="35dp" 
		        android:orientation="horizontal"
		        android:layout_marginTop="3dp" >
		        
		        <TextView
		            android:text="@string/Email_Address"
		            android:textSize="13sp"
		        	android:layout_width="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:layout_marginRight="10dp"
		        	android:layout_height="25dp" />
		        
		        <EditText
		            android:id="@+id/email_address"
		            android:maxLines="1"
		            android:singleLine="True"
		            android:nextFocusDown="@+id/phone_number"
		            android:scrollbars="horizontal"
                	android:scrollHorizontally="true"
				 	android:layout_width="fill_parent"
				 	android:layout_height="30dp"
				 	android:textSize="13sp"
				 	android:layout_marginRight="10dp"
				 	android:background="@drawable/rounded_edittext"
				 	android:padding="8dp" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="fill_parent" 
		        android:layout_height="35dp" 
		        android:orientation="horizontal"
		        android:layout_marginTop="3dp" >
		        
		        <TextView
		            android:text="@string/Phone_Number"
		            android:textSize="13sp"
		        	android:layout_width="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:layout_marginRight="10dp"
		        	android:layout_height="25dp" />
		        
		        <EditText
		           	android:id="@+id/phone_number"
		           	android:maxLines="1"
		            android:singleLine="True"
		            android:nextFocusDown="@+id/facebook"
		            android:scrollbars="horizontal"
                	android:scrollHorizontally="true"
		            android:hint="XXX-XXX-XXXX"
				 	android:layout_width="fill_parent"
				 	android:layout_height="30dp"
				 	android:textSize="13sp"
				 	android:layout_marginRight="10dp"
				 	android:background="@drawable/rounded_edittext"
				 	android:padding="8dp" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="fill_parent" 
		        android:layout_height="35dp" 
		        android:orientation="horizontal"
		        android:layout_marginTop="3dp" >
		        
		        <TextView
		            android:text="@string/Facebook"
		            android:textSize="13sp"
		        	android:layout_width="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:layout_marginRight="10dp"
		        	android:layout_height="25dp" />
		        
		        <EditText
		            android:id="@+id/facebook"
		            android:maxLines="1"
		            android:singleLine="True"
		            android:nextFocusDown="@+id/instagram"
		            android:scrollbars="horizontal"
                	android:scrollHorizontally="true"
		            android:hint="Copy and paste the url"
				 	android:layout_width="fill_parent"
				 	android:layout_height="30dp"
				 	android:textSize="13sp"
				 	android:layout_marginRight="10dp"
				 	android:background="@drawable/rounded_edittext"
				 	android:padding="8dp" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="fill_parent" 
		        android:layout_height="35dp" 
		        android:orientation="horizontal"
		        android:layout_marginTop="3dp" >
		        
		        <TextView
		            android:text="@string/Instagram"
		            android:textSize="13sp"
		        	android:layout_width="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:layout_marginRight="10dp"
		        	android:layout_height="25dp" />
		        
		        <EditText
		            android:id="@+id/instagram"
		            android:maxLines="1"
		            android:singleLine="True"
		            android:nextFocusDown="@+id/twitter"
		            android:scrollbars="horizontal"
                	android:scrollHorizontally="true"
		            android:hint="Copy and paste the url"
				 	android:layout_width="fill_parent"
				 	android:layout_height="30dp"
				 	android:textSize="13sp"
				 	android:layout_marginRight="10dp"
				 	android:background="@drawable/rounded_edittext"
				 	android:padding="8dp" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="fill_parent" 
		        android:layout_height="35dp" 
		        android:orientation="horizontal"
		        android:layout_marginTop="3dp" >
		        
		        <TextView
		            android:text="@string/Twitter"
		            android:textSize="13sp"
		        	android:layout_width="wrap_content"
		        	android:layout_marginLeft="10dp"
		        	android:layout_marginRight="10dp"
		        	android:layout_height="25dp" />
		        
		        <EditText
		            android:id="@+id/twitter"
		            android:maxLines="1"
		            android:singleLine="True"
		            android:scrollbars="horizontal"
                	android:scrollHorizontally="true"
		            android:hint="Copy and paste the url"
				 	android:layout_width="fill_parent"
				 	android:layout_height="30dp"
				 	android:textSize="13sp"
				 	android:layout_marginRight="10dp"
				 	android:background="@drawable/rounded_edittext"
				 	android:padding="8dp" />
		        
		    </LinearLayout>
		    
		</LinearLayout>
	    
	    <View
			android:layout_width="1dp"
			android:layout_height="0dip"
			android:layout_weight="1" />
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">
		    
		   	<Button
	             android:background="@drawable/sandrift"
	             android:onClick="editUserContactInfo"
	             android:id="@+id/submitbutton"
				 android:layout_width="125dp"
				 android:layout_height="wrap_content"
				 android:clickable="true" 
				 android:text="@string/Submit" />
		   	
		</LinearLayout>
		        
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginTop="5dp"
		    android:gravity="center" >
	        
	    	<TextView 
	            android:layout_marginLeft="3dp"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="Left: Serial Number Search" 
				android:textSize="14sp" />
	        
	        <View
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1" />
	        
			<TextView 
	            android:layout_marginRight="3dp"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="Right: Bikes" 
				android:textSize="14sp" />
	    	
		</LinearLayout>
		
	</LinearLayout>
	
</ScrollView>